--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=FAED185C4CD999E91626F7AD682A8D54
+ProjectName=TRAUTYF
+ProjectDisplayedTitle=TAUTYF
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 StagingDirectory=(Path="C:/ScratchMPShipping")
@@ -11,5 +13,3 @@ UsePakFile=False
 
 [/Script/Engine.GameSession]
 MaxPlayers=2
-
-
