Bugfixes, Improvements, added DynamicGravity

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,4 +87,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.Engine]
++ActiveGameNameRedirects=(MultiplayerShootout="/Script/MultiplayerShootout", NewGameName="/Script/TRAUTYF")
+
 
