--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,12 +4,13 @@ ProjectName=TRAUTYF
 ProjectDisplayedTitle=TAUTYF
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-StagingDirectory=(Path="C:/ScratchMPShipping")
+StagingDirectory=(Path="C:/Users/Marco/Documents/Unreal Projects/Build")
 ForDistribution=False
 UsePakFile=True
 UsePakFile=False
 +CulturesToStage=en
 +DirectoriesToAlwaysStageAsUFS=(Path=ThirdParty/Steamworks)
+FullRebuild=True
 
 [/Script/Engine.GameSession]
 MaxPlayers=2
